fix broken images on small screens

--- a/client/src/styles/message.module.scss
+++ b/client/src/styles/message.module.scss
@@ -21,6 +21,11 @@
             opacity: 60%;
         }
     }
+    .bottomPart {
+        img {
+            object-fit: contain;
+        }
+    }
 }
 
 .message.own {
